--- a/icons/devhelpstyle.css
+++ b/icons/devhelpstyle.css
@@ -41,7 +41,7 @@ ul.external_link {
 	margin-left:auto;
 }
 
-.main_sourcesample {
+.main_source, .main_sourcesample {
 	padding-right: 10px;
 	padding-left: 5px;
 	padding-bottom: 5px;
