--- a/icons/devhelpstyle.css
+++ b/icons/devhelpstyle.css
@@ -125,6 +125,21 @@ div.site_body {
 	color: #a52a2a;
 }
 
+.main_source .main_literal {
+	text-decoration: none;
+	color: #ff0000;
+}
+
+.main_comment {
+	text-decoration: none;
+	color: #888a85;
+}
+
+.main_preprocessor {
+	text-decoration: none;
+	color: #ad7fa8;
+}
+
 div.main_code_definition {
 	padding-right: 10px;
 	padding-left: 10px;
