manual: Add version information and copyright to manual
The documentation is downloaded from the GNOME wiki. So the same copyright
notice is used. The wiki states (c) The GNOME Project at the bottom of each
page. The license for all new documentation is CC-BY-SA 4.0. See
https://wiki.gnome.org/DocumentationProject/Guide/Licensing

--- a/doc/manual/default.css
+++ b/doc/manual/default.css
@@ -120,6 +120,14 @@ pre {
 	white-space: pre-wrap;
 }
 
+.c-document_version { border: solid 2px #ccc;
+	border-radius: 4px;
+	width: 100%;
+	font-sizde: 95%;
+}
+.c-document_version tr td:first-child { text-align: right; }
+.c-document_version tr:nth-child(odd) { background-color: #f0f0f0; }
+
 blockquote span.literal {
 	font-family: monospace;
 	font-weight: bold;
